src/test/deca/context/invalid/created/test-a-22.deca
class A{
    int x;
}
class B extends A{
    int y;
}

class C extends B{
    int w;
}
{
    A a = new B();
    B b = (B)(a);
}